# python-project-49

./: .gitignore  .pyproject.toml.swo  Makefile  README.md  pyproject.toml
brain_games/: brain_games_lib.py  brain_games_start.py  cli.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_games_eng.py  brain_gcd.py  brain_prime.py  brain_progression.py
