[project]
authors = [
    {name = "slpncrg"}
]
name = "hexlet-code"
version = "0.1.0"
description = "First Hexlet's project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games", "brain_games_lib", "brain_even", "brain_calc", "brain_gcd"] 

[dependency-groups]
dev = [
    "ruff>=0.8.5",
]

[project.scripts]
brain-games = "brain_games.games.brain_games:main"
brain-even = "brain_games.games.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-gcd = "brain_games.games.brain_gcd:main"
brain-progression = "brain_games.games.brain_progression:main"
brain-prime = "brain_games.games.brain_prime:main"